# je-ockovani-bezpecne

./: .env_example  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  Procfile  README.md  config.py  je-ockovani-bezpecne.code-workspace  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  svelte.config.js  update.py
.github/workflows/: testing.yml  update.yml
data/: stats.json  submits.json  vaccines.json
jeockovanibezpecne/: __init__.py  database.py  init.py  models.py  routes.py  stats.py  update.py  wsgi.py
jeockovanibezpecne/static/: package.json
jeockovanibezpecne/static/css/: main.css
jeockovanibezpecne/templates/: 404.jinja2  index.jinja2
jsouvakcinybezpecne/: __init__.py  database.py  messages.pot  models.py  routes.py  update.py  wsgi.py
jsouvakcinybezpecne/static/: package.json  site.webmanifest
jsouvakcinybezpecne/static/css/: main.css
jsouvakcinybezpecne/templates/: base.jinja2  index.jinja2
jsouvakcinybezpecne/templates/stats/: stats.jinja2
jsouvakcinybezpecne/translations/cs/LC_MESSAGES/: messages.mo  messages.po
migrations/versions/: 0b655cf4ab16_.py
src/: app.html
src/routes/: __error.svelte  __layout.svelte  index.json.js  index.svelte
static/css/: main.css
tests/: conftest.py  data.sql  locust.py  test_db.py  test_factory.py  test_simple.py  test_static.py  test_stats.py  test_update.py
update/: update.py
