[metadata]
name = jeockovanibezpecne
version = 0.1
description = Microsite jeockovanibezpecne.cz
long_description = file: README.md

author = Ondra Zahradnik
author_email = ondra.zahradnik@gmail.com

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7


[options]
python_requires = >= 3.7
zip_safe = False
include_package_data = True
packages=find:

# Requirements
setup_requires =
    pip-tools

install_requires =
    flask
    gunicorn
    pandas
    flask-babel
    gazpacho
    python-dotenv
    flask-migrate
    sqlalchemy
    flask-talisman

tests_require =
    pytest


[options.extras_require]
dev =
    mkdocs
    mkdocs-material
    mkdocs-material-extensions
    mkdocstrings
    mkdocs-jupyter
    pre-commit
    flake8
    brunette
    pytest
    coverage
    requests
    pygments
    pymdown-extensions
    pip-tools
    rope
    pylint
    locust
test =
    pytest
    requests
    coverage
    flake8
    brunette

# Data files
[options.package_data]
* = *.sql

[aliases]
test=pytest

# Pytest options
[tool:pytest]
addopts = --verbose
python_classes =
xfail_strict = true
junit_family=xunit1

[coverage:run]
branch = True
source =
    jeockovanibezpecne

[tool:brunette]
line-length = 120
verbose = true
single-quotes = false

[flake8]
max-line-length = 120
